--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,4 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "backend/api/server.mjs",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/api/server.mjs"
-    }
-  ]
+	"version": 2,
+	"rewrites": [{ "source": "/api(.*)", "destination": "/api" }]
 }
