--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
@@ -17,7 +17,8 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
-    "multer-s3": "^2.10.0"
+    "multer-s3": "^2.10.0",
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
